--- a/policy.html
+++ b/policy.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.rtl.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <title>Refund </title>
+    <title>Privacy policy </title>
 </head>
 
 <body class="categoryBody refundBody">
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
         <div class="container ">
 
             <button class="btn btn-primary d-md-none d-block SideBar" type="button" data-bs-toggle="offcanvas"
@@ -587,12 +587,15 @@
     <!--End Navbar-->
 
 
+
+
     <!--BreadCrumb-->
 
     <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb" class="mb-2 mt-4 px-3 breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">الرئيسية</a></li>
-            <li class="breadcrumb-item active" aria-current="page"><a href="">سياسة الإستبدال والإسترجاع</a> </li>
+            <li class="breadcrumb-item active" aria-current="page"><a href="">الشروط والأحكام
+                </a> </li>
         </ol>
     </nav>
     <!--End BreadCrumb-->
@@ -606,83 +609,164 @@
                 <!--categoryProduct-->
                 <div class=" categoryProduct px-md-5">
                     <div class="row mb-4 text-center">
-                        <h3><b>سياسة الاستبدال والاسترجاع</b> </h3>
+                        <h3><b>الشروط والأحكام</b> </h3>
                     </div>
                     <div class="row my-5">
                         <p>
 
-                            في ياقوت.. رضاكم هو هدفنا
-                            <br>
-                            حرصاً منا على سلامتكم، فإن ياقوت لا يسمح باسترجاع أو استبدال منتجات التجميل ومنتجات
+                            موقع نايس ون الإلكتروني www.yaqoot.com يمكن الوصول إليه عن طريق الإنترنت و/أو تطبيقات الهاتف
+                            المتحرك.
 
-                            العناية حتى لو كانت بحالتها الأصلية،
+                            <br>
+                            يوفر لكم المحتويات والخدمات المتوفرة على الموقع حسب الأحكام والشروط التالية وسياسة الخصوصية
+                            لدينا وأحكام وشروط وسياسات أخرى قد تجدونها من خلال موقعنا بشأن وظائف محددة، مزايا أو عروض أو
+                            خدمة العملاء، التي تعتبر جميعها جزءا من أو متضمنة في هذه الأحكام والشروط (عامة، "الأحكام
+                            والشروط").
+
+
                             <br>
                             بإستثناء المنتجات التي تصل إليكم تالفة فقط.
                             <br>
-                            كما يمكنكم استرجاع منتجات الأجهزة بشرط لم يتم استخدامها أو فتحها وأن تكون بحالتها الأصلية
-                            كما تم استلامها من ياقوت.
+                            دخولكم إلى الموقع أو استخدامه هو بمثابة إقرار منكم بأنكم قد قرأتم هذه الأحكام والشروط
+                            وفهمتوها ووافقتم على الالتزام بها التزاما كاملا دون قيد أو شرط
                         </p>
                         <br>
                         <p>
-                            <b>س: هل هناك رسوم للاسترجاع ؟</b>
+                            <b>الملكية الفكرية </b>
                             <br>
-                            عند إسترجاع منتج سليم غير تالف أي بحالته الأصلية فأن الرسوم يتحملها العميل وقيمتها 19 ريال
+                            نحن نمنحك صلاحية شخصية غير قابلة للتحويل أو التنازل وقابلة للإلغاء لاستخدام البرامج التي
+                            نوفرها لك كجزء من الموقع الإلكتروني، وذلك لغرض واحد يتمثل في تمكينك من استخدام خدماتنا
+                            والاستمتاع بمزاياها، وهذا على النحو المقرر من قبل نايس ون ووفق الطريقة التي تسمح بها الشروط
+                            والأحكام.
+                            <br>
+                            ويحظر الاستخدام التجاري أوالاستخدام نيابةً عن الغير، ما لم نسمح بذلك صراحةً وخطيًا بصورة
+                            مسبقة. ويترتب على أي خرق لهذه الشروط والأحكام الإلغاء الفوري للرخصة الممنوحة بمقتضى هذه
+                            الفقرة دون سابق إنذار لك، ودون المساس بأي حقوق أخرى.
+                        </p>
+                        <br>
+                        <p>
+                            جميع حقوق النشر والعلامات التجارية والأسماء التجارية والمظهرالتجاري والتصميمات و"سمات"
+                            الموقع الإلكتروني وأي شكل من الأشكال الأخرى للملكية الفكرية والمواد والحقوق الأخرى المرتبطة
+                            بالموقع، بما في ذلك البرامج وكود إتش تي إم إل وغيره من الأكواد المستخدمة في الموقع
+                            الإلكتروني أو عناوين الصفحات أو الصور أو النصوص أو الرسوم التوضيحية أو التنسيقات أو الشعارات
+                            أوالتصاميم أو الأيقونات أو الصور أو البرامج أو المقاطع الموسيقية أو التنزيلات أومقاطع
+                            الفيديو (إجمالاً، "الملكية الفكرية")، هي — وتظل في جميع الأوقات— ملكية وحقًا أصيلاً لنايس ون
+                            و/ أو هي ملكية لصاحب كل منها، كما أنها محمية من قبل المملكة العربية السعودية وقوانين
+                            العلامات التجارية وحقوق التأليف والنشر الدولية.
+                            <br>
 
-                            ويتم خصمها من قيمة المُنتج المسترجع،
+                            ويجوز الوصول إلى الملكية الفكرية وجميع المواد الأخرى المعروضة على موقعنا الإلكتروني وعرضها
+                            وتنزيلها وطباعتها فقط للاستخدام الشخصي غير التجاري، وذلك حسبما تجيزه صراحةً نايس ون و/ أو
+                            المرخَّص لهم كأطراف ثالثة من جانب نايس ون.
+                            <br>
+                            ولكن(1) بشرط ألا تجري أي تعديل أو تغيير على الملكية الفكرية بأي شكل من الأشكال،
+                            <br>
+                            و(2) أن لا تقدم أو تتيح الملكية الفكرية لأي طرف ثالث كنوع من التجارة. ولن تكتسب أي حق من
+                            حقوق التأليف والنشر أو العلامات التجارية أو غيرها من حقوق الملكية على الإطلاق فيما يتعلق
+                            بالملكية الفكرية. ولا يؤول لك أي ترخيص أو حق أومصلحة في أي مواد أو برامج كأثر مترتب على
+                            استخدامك لهذا الموقع الإلكتروني أو على وصولك إلى الملكية الفكرية أو عرضها أو تنزيلها أو
+                            طباعتها.
+                            <br>
+                            ولا يجوز لك نسخ (باستثناء ما هو مبين أعلاه) أو نشر أو بث أو توزيع أو عرض أو تعديل أو إنشاء
+                            أعمال مشتقة من أي من مواد الملكية الفكرية أو من موقعنا الإلكتروني أو بيعها أوالمشاركة في أي
+                            بيع أو استغلال لها بأي شكل من الأشكال، سواء كليًا أو جزئيًا. ولايجوز استخدام الملكية الفكرية
+                            إلا باعتبارها مورد للتسوق. ويُمنَع منعًا باتًا أي استخدام آخر للملكية الفكرية، بما في ذلك
+                            نسخها أو تعديلها أو توزيعها أو بثها أوإعادة نشرها أو عرضها أو أدائها.
 
-                            <br>
-                            اما عند استرجاع المنتج التالف فأن ياقوت تتحمل كامل الرسوم.
-                        </p>
-                        <br>
-                        <p>
-                            <b>
-                                س: كيف يمكنني استبدال / استرجاع المنتج التالف؟
-                            </b>
-                            <br>
-                            ج: سيسعد رفاقنا في خدمة العملاء بخدمتكم حيال ذلك من خلال إرسالكم تذكرة على الطلب او عبر خدمة
-                            العملاء المتوفرة في تطبيقنا "ياقوت" أو من خلال الرقم920033385، بشرط أن يكون المنتج المستبدل/
-                            المسترجع بحالته الأصلية وبغلافه الأصلي ولم يتم استخدامه أو فتحه أو تغيير ملامح التغليف
-                            الخاصة بالمنتج.
-                        </p>
-                        <br>
-                        <p>
-                            <b>
-                                س: كم هي المدة المسموحة للاستبدال / استرجاع المنتج التالف ؟
-                            </b>
-                            <br>
-                            ج: يمكنكم استبدال / استرجاع المنتج التالف خلال 7أيام من عملية الشراء.
-                        </p>
-                        <br>
-                        <p>
-                            <b>
-                                س: كم تستغرق عملية الاستبدال / الاسترجاع للمنتج التالف ؟
-                            </b>
-                            <br>
-                            ج: في ياقوت نعمل بكل جهد لإرضاؤكم، قد تستغرق مدة عملية الاستبدال / الاسترجاع 10 أيام عمل.
-                        </p>
-                        <br>
-                        <p>
-                            <b>
-                                س: في عملية الاسترجاع ، كيف يمكنني استرداد المبلغ الذي دفعته ؟
-                            </b>
-                            <br>
-                            ج: يتم استرداد المبلغ بعد وصول المنتج التالف إلينا والتأكد من حالته، ومن ثم تحويل المبلغ
-                            لحسابكم فوراً.
-                        </p>
-                        <br>
-                        <p>
-                            <b>
-                                س: في عملية الاستبدال، ماهي الخطوات المتخذة حيال ذلك ؟
-                            </b>
-                            <br>
-                            ج: عند رغبتكم باستبدال المنتج التالف، واختيار المنتج البديل نرجو منكم تحويل مبلغ الفرق بين
-                            المنتج التالف والمنتج البديل.
-                        </p>
-                        <br>
-                        <p>
-                            في ياقوت.. رضاكم هو هدفنا
 
                         </p>
+                        <br>
+                        <p>
+                            نايس ون هي المالك الحصري أو المرخَّص لها للملكية الفكرية بشكل حصري (حسب مقتضى الحال)، وهي
+                            المرخَّص لها بشكل حصري لإسم النطاق www.niceonesa.com
+                        </p>
+                        <br>
+                        <p>
+                            يجوز لنايس ون أن توفر محتوى مملوكًا لأطراف ثالثة ("محتوى أطراف ثالثة") أو روابط لمواقع
+                            إلكترونية لأطراف ثالثة ("مواقع أطراف ثالثة") كخدمة للمهتمين بهذه المعلومات. ولا تراقب نايس
+                            ون أي محتوى لأطراف ثالثة أو مواقع أطراف ثالثة ولا تصدِّق على محتواها وليس لديها أي سيطرة
+                            عليها، ولا يعني إدراج روابط لمحتوى أطراف ثالثة أو لمواقع أطراف ثالثة وجود أي ارتباط أو علاقة
+                            بين نايس ون والأطراف الثالثة ذات الصلة.
+                            <br>
+                            ولا تضمن نايس ون أو تقِّر بدقة أو كمال أي محتوى أطراف ثالثة أو أي مواقع أطراف ثالثة ولا
+                            تصادق على مدى دقتها أو كمالها. كما أن نايس ون ليست مسؤولة عن تحديث أو مراجعة محتوى الأطراف
+                            الثالثة أو مواقع الأطراف الثالثة. ويكون استخدامك لمحتوى الأطراف الثالثة ومواقع الأطراف
+                            الثالثة على مسؤوليتك. ولايعكس بالضرورة محتوى الأطراف الثالثة، بما في ذلك تعليقات مستخدمي
+                            محتوى الأطراف الثالثة التي ترد إلى نايس ون، وجهات نظر نايس ون الخاصة
+                        </p>
+                        <br>
+                        <p>
+                            في ضوء ما سبق، لن تتحمل نايس ون المسؤولية لأي سبب كان على الإطلاق عن محتوى الأطراف الثالثة
+                            و/ أو مواقع الأطراف الثالثة، بما يشمل على سبيل المثال لا الحصر، توفير مصادر خارجية أو
+                            المحتوى أو الإعلانات التجارية أو المنتجات أوالخدمات أو أي معلومات أو بيانات أخرى متوفرة على
+                            الموقع الإلكتروني أو من مصادر خارجية.
+                        </p>
+                        <br>
+                        <p>
+                            <b>
+                                الخصوصية </b>
+                            <br>
+                            الرجاء مراجعة سياسة الخصوصية لدينا لمعرفة تفاصيل حول ممارساتنا بشأن المعلومات الشخصية.
+
+
+                        </p>
+                        <br>
+                        <p>
+                            <b>
+                                شروط البيع
+                            </b>
+                            1. الأهلية
+                            <br>
+                            شراء المنتجات من خلال الموقع الإلكتروني مقصور حصرياً على الأطراف الذين يمكنهم قانوناً إبرام
+                            عقود على الإنترنت وفقاً لقوانين المملكة العربية السعودية.
+
+
+                        </p>
+                        <br>
+                        <p>
+                            وحتى يمكنك إجراءعمليات الشراء على الموقع الإلكتروني، يجب عليك تقديم بياناتك الشخصية، بما في
+                            ذلك اسمك واسم عائلتك الحقيقيين ورقم هاتف جوال صحيح وعنوان بريد إلكتروني سليم وتفاصيل الدفع
+                            وعنوان صحيح لتحصيل الفواتير والمعلومات الأخرى المطلوبة وفق ما هو مقرر. كما أنك تقر وتضمن بأن
+                            تفاصيل الدفع التي تقدمها سارية وكاملة وصحيحة، وتؤكد على أنك الشخص المشار إليه في معلومات
+                            الفواتير المقدمة.
+                        </p>
+                        <br>
+                        <p>
+
+                            الموقع الإلكتروني متوافر فقط للأشخاص الذين يستوفون شروط نايس ون بشأن الأهلية والدفع
+                            الالكتروني، وهم أولئك الذين يحملون بطاقة ائتمان سارية المفعول صادرة من مصرف مقبول لدى نايس
+                            ون ، وأولئك الذين أذنوا لنا بإجراء خصم من بطاقات الائتمان الخاصة بهم لقيمة السعر الإجمالي
+                            للمنتجات التي يشترونها، بما يشمل أي ضرائب أو رسوم توصيل، إن وجدت. والمنتجات التي تُشترى تكون
+                            للاستخدام الشخصي أولتقديمها كهدية فقط، ولا يجوز إعادة بيعها أو استخدامها لأغراض تجارية أو
+                            لتحقيق أية مكاسب تجارية أخرى. وتحتفظ نايس ون بالحق في فرض قيود على الكميات المتعددة من قطعة
+                            بعينها، والتي تُشحن إلى عميل أو عنوان واحد بعينه. 
+                        </p>
+                        <br>
+                        <p>
+                            عندما تطلب شراء منتج (منتجات)، فإنك بذلك تأذن صراحةً لـ نايس ون بالتحقق من بطاقة الائتمان وبنقل أوإرسال أو الحصول على معلومات بطاقة الائتمان الخاصة بك أو معلومات التقارير الائتمانية(بما يشمل أي معلومات محدَّثة) إلى أو من أطراف ثالثة للمصادقة على هويتك والتحقق من صحة بطاقتك الائتمانية وللحصول على التفويض الأولي باستخدام البطاقة و/أو إجازة عمليات الشراء الفردية، وذلك حسبما نراه ضرورياً. وتُعد موافقاً على أنه يجوز لنا استخدام المعلومات الشخصية التي تقدمها لغرض إجراء عمليات التحقق اللازمة لمكافحة الاحتيال والغش، وأنه يجوز الكشف عن هذه المعلومات الشخصية لمرجع ائتماني أو لوكالة معنية بمكافحة الاحتيال والغش، والتي قد تحتفظ بسجل لتلك المعلومات.
+                        </p>
+                        <br>
+                        <p>
+                            يُرجى الرجوع إلى سياسة الخصوصية الخاصة بنا للحصول على المعلومات المتعلقة بكيفية استخدامنا للبيانات الخاصة بك.
+
+                        </p>
+                        <br>
+                        <p>
+                            <b>2. طلب المنتجات
+                            </b>
+                            <br>
+                            المنتجات المتوفرة على الموقع الإلكتروني، بما في ذلك أي عينات أو هدايا مع عمليات الشراء قد تعرضها نايس ون عليك، هي للاستخدام الشخصي أو للهدايا فقط. ولا يجوز لك بيع أو إعادة بيع أي منتجات تشتريها أو تحصل عليها بأي طريقة أخرى خلاف ذلك من نايس ون.
+                        </p>
+                        <br>
+                        <p>
+                            قد يكون هناك اختلاف بسيط في تصميم الشكل الخارجي "العبوة - الكرتون" للمنتج المُستلم من قبل العميل وصورة عرضه في موقع نايس ون وذلك بسبب إصدار تصميم أحدث للعبوة أو الكرتون الخارجي للمنتج من قبل الشركة المُصنعة،
+
+
+                            <br>
+                            لكن ذلك لا يعني اختلاف محتوى المنتج و نايس ون يضمن لكم ذلك، ويسعى دائماً لتحديث وتجديد صور عرض المنتجات بشكل دوري.
+
+                        </p>
+                        <br>
                     </div>
 
                 </div>
@@ -691,8 +775,8 @@
     </section>
 
 
-       <!--footer-->
-       <footer class="footer mt-3 ">
+    <!--footer-->
+    <footer class="footer mt-3 ">
         <div class="whyUs mb-5 text-center p-4 pt-2">
             <div class="blueLine">
                 <h3 class="mb-0">ليش تختارنا؟</h3>
@@ -767,11 +851,11 @@
                                 <div class="card">
                                     <a href="#">
                                         <div class="FooterServicesImage ">
-                                           <a href="refund.html">
-                                            <div class="FooterServicesImage">
+                                            <a href="refund.html">
+                                                <div class="FooterServicesImage">
 
-                                                <img src="images/Exchange.png" class="card-img-top" alt="...">
-                                            </div>
+                                                    <img src="images/Exchange.png" class="card-img-top" alt="...">
+                                                </div>
                                         </div>
                                         <div class="card-body">
                                             <h6 class="card-title">الإستبدال والإسترجاع</h6>
