--- a/Brand.html
+++ b/Brand.html
@@ -12,8 +12,8 @@
 </head>
 
 <body class=" brandBody">
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
+     <!--Navbar-->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex pt-3">
         <div class="container ">
 
             <button class="btn btn-primary d-md-none d-block SideBar" type="button" data-bs-toggle="offcanvas"
@@ -273,7 +273,6 @@
             </div>
             <div class="offcanvas-body cart-body">
                 <div class="text-start mb-3">
-                    أنشئ حسابًا لتتمكن من التسوق بشكل أسرع والوصول لطلباتك والمفضلة وغيرها
                 </div>
                 <div class="form-group mb-5">
                     <div class="input-group ">
@@ -291,17 +290,14 @@
                         <label class="btn btn-outline-dark" for="danger-outlined"> أنثى</label>
                     </div>
 
-                    <div class="input-group ">
-                        <input type="email" class="form-control" id="basic-url" aria-describedby="basic-addon3"
-                            placeholder=" إيميل">
-                    </div>
+
                     <div class="input-group ">
 
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>حدد المحافظة</option>
-                        <option value="1">صنعاء</option>
-                        <option value="2">عدن</option>
-                      </select>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>حدد المحافظة</option>
+                            <option value="1">صنعاء</option>
+                            <option value="2">عدن</option>
+                        </select>
                     </div>
 
                     <div class="input-group ">
@@ -309,7 +305,20 @@
                     </div>
 
                     <div class="input-group ">
-                        <input type="password" class="form-control" placeholder="كلمة المرور" aria-label="password">
+                        <input type="text" class="form-control" placeholder="العنوان" aria-label="password">
+                    </div>
+
+                    <div class="input-group ">
+                        <input type="text" class="form-control" placeholder="أسم المستلم كامل" aria-label="password">
+                    </div>
+                    <div class="input-group ">
+                        <input type="number" class="form-control" aria-label=""
+                            placeholder=" رقم هاتف المستلم للطلب                        ">
+                    </div>
+
+                    <div class="input-group ">
+                        <input type="text" class="form-control"
+                            placeholder="عنوان المسلم للطلب بالتحديد                        " aria-label="password">
                     </div>
 
                     <div class="input-group">
@@ -321,12 +330,6 @@
                 </div>
                 <div class=" cart-btn ">
 
-                    <p class="mb-3 float-start"> <i class="fa-solid fa-right-from-bracket me-4"></i>تسجيل دخول بالبريد الإلكتروني
-                    </p>
-                    <br>
-                    <p class="mb-5 float-start"> <i class="fa-solid fa-phone me-4"></i>تسجيل دخول بالبريد الإلكتروني </p>
-
-
                     <button class="btn btn-dark p-3" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#CompleteOrder" aria-controls="CompleteOrder">
                         تسجيل جديد
@@ -337,7 +340,7 @@
             </div>
         </div>
     </nav>
-    <input type="search" placeholder="إبحث" class="m-0 w-100 px-3 py-2 hiddenSearch d-md-none" >
+    <input type="search" placeholder="إبحث" class="m-0 w-100 px-3 py-2 hiddenSearch d-md-none">
     <nav class="navbar d-md-block d-none">
         <div class="container">
             <div class="row px-2 px-md-0">
