--- a/Brand.html
+++ b/Brand.html
@@ -1370,8 +1370,8 @@
         </div>
     </section>
 
-    <!--footer-->
-    <footer class="footer mt-3 ">
+     <!--footer-->
+     <footer class="footer mt-3 ">
         <div class="whyUs mb-5 text-center p-4 pt-2">
             <div class="blueLine">
                 <h3 class="mb-0">ليش تختارنا؟</h3>
@@ -1494,8 +1494,11 @@
                 </div>
             </div>
         </div>
-        <div class="SocialMediaIcons py-5 mt-5">
-            <div class="container">
+        <div class="SocialMediaIcons py-5 mt-5 position-relative">
+            <div class="blueLine text-center">
+                <h3 class="mb-0">تابعونا </h3>
+            </div>
+            <div class="container pt-4">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
