--- a/policy.html
+++ b/policy.html
@@ -1259,8 +1259,11 @@
                 </div>
             </div>
         </div>
-        <div class="SocialMediaIcons py-5 mt-5">
-            <div class="container">
+        <div class="SocialMediaIcons py-5 mt-5 position-relative">
+            <div class="blueLine text-center">
+                <h3 class="mb-0">تابعونا </h3>
+            </div>
+            <div class="container pt-4">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
