--- a/product.html
+++ b/product.html
@@ -1549,7 +1549,7 @@
 
 
       <!--footer-->
-      <footer class="footer mt-3 ">
+    <footer class="footer mt-3 ">
         <div class="whyUs mb-5 text-center p-4 pt-2">
             <div class="blueLine">
                 <h3 class="mb-0">ليش تختارنا؟</h3>
@@ -1624,11 +1624,11 @@
                                 <div class="card">
                                     <a href="#">
                                         <div class="FooterServicesImage ">
-                                           <a href="refund.html">
-                                            <div class="FooterServicesImage">
+                                            <a href="refund.html">
+                                                <div class="FooterServicesImage">
 
-                                                <img src="images/Exchange.png" class="card-img-top" alt="...">
-                                            </div>
+                                                    <img src="images/Exchange.png" class="card-img-top" alt="...">
+                                                </div>
                                         </div>
                                         <div class="card-body">
                                             <h6 class="card-title">الإستبدال والإسترجاع</h6>
@@ -1672,8 +1672,11 @@
                 </div>
             </div>
         </div>
-        <div class="SocialMediaIcons py-5 mt-5">
-            <div class="container">
+        <div class="SocialMediaIcons py-5 mt-5 position-relative">
+            <div class="blueLine text-center">
+                <h3 class="mb-0">تابعونا </h3>
+            </div>
+            <div class="container pt-4">
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
