--- a/category.html
+++ b/category.html
@@ -2224,170 +2224,172 @@
         </div>
     </section>
 
-
-     <!--footer-->
-     <footer class="footer mt-3 ">
-        <div class="whyUs mb-5 text-center p-4 pt-2">
-            <div class="blueLine">
-                <h3 class="mb-0">ليش تختارنا؟</h3>
-            </div>
-            <div class="FooterCards mx-auto mt-5 d-md-block d-none">
-                <div class="card-group">
-                    <div class="card">
-                        <img src="images/Footer card 1.png" alt="">
-                    </div>
-                    <div class="card">
-                        <img src="images/Footer card 2.png" alt="">
-                    </div>
-                    <div class="card">
-                        <img src="images/Footer card 3.png" alt="">
-                    </div>
+ <!--footer-->
+ <footer class="footer mt-3 ">
+    <div class="whyUs mb-5 text-center p-4 pt-2">
+        <div class="blueLine">
+            <h3 class="mb-0">ليش تختارنا؟</h3>
+        </div>
+        <div class="FooterCards mx-auto mt-5 d-md-block d-none">
+            <div class="card-group">
+                <div class="card">
+                    <img src="images/Footer card 1.png" alt="">
+                </div>
+                <div class="card">
+                    <img src="images/Footer card 2.png" alt="">
+                </div>
+                <div class="card">
+                    <img src="images/Footer card 3.png" alt="">
                 </div>
             </div>
-            <div class="FooterCards mx-auto mt-5 d-md-none d-block">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="images/Footer card 1.png" class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Footer card 2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Footer card 3.png" class="d-block w-100" alt="...">
-                        </div>
+        </div>
+        <div class="FooterCards mx-auto mt-5 d-md-none d-block">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Footer card 1.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Footer card 2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Footer card 3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="youNeedHelp text-center">
-            <div class="blueLine py-md-3 py-2">
-                <h5 class="mb-0">هل تحتاج المساعدة؟</h5>
-            </div>
-            <div class="FooterServices pt-3 pb-2">
-                <div class="container-fluid">
-                    <div class="card-group mt-5">
-                        <div class="row">
-                            <div class="col-md-1 col-0"></div>
-                            <div class="col-md-2 col-6">
-                                <div class="card">
-                                    <a href="#">
-                                        <div class="FooterServicesImage">
+    </div>
+    <div class="youNeedHelp text-center">
+        <div class="blueLine py-md-3 py-2">
+            <h5 class="mb-0">هل تحتاج المساعدة؟</h5>
+        </div>
+        <div class="FooterServices pt-3 pb-2">
+            <div class="container-fluid">
+                <div class="card-group mt-5">
+                    <div class="row">
+                        <div class="col-md-1 col-0"></div>
+                        <div class="col-md-2 col-6">
+                            <div class="card">
+                                <a href="#">
+                                    <div class="FooterServicesImage">
 
-                                            <img src="images/howToOrder.png" class="card-img-top" alt="...">
-                                        </div>
-                                        <div class="card-body">
+                                        <img src="images/howToOrder.png" class="card-img-top" alt="...">
+                                    </div>
+                                    <div class="card-body">
 
-                                            <h6 class="card-title">كيفية الطلب</h6>
-                                        </div>
-                                    </a>
-                                </div>
+                                        <h6 class="card-title">كيفية الطلب</h6>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="col-md-2  col-6">
+                        </div>
+                        <div class="col-md-2  col-6">
 
-                                <div class="card">
-                                    <a href="#">
-                                        <div class="FooterServicesImage">
+                            <div class="card">
+                                <a href="#">
+                                    <div class="FooterServicesImage">
 
-                                            <img src="images/Delivery.png" class="card-img-top" alt="...">
-                                        </div>
-                                        <div class="card-body">
-                                            <h6 class="card-title">التوصيل و الشحن</h6>
-                                        </div>
-                                    </a>
-                                </div>
+                                        <img src="images/Delivery.png" class="card-img-top" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <h6 class="card-title">التوصيل و الشحن</h6>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="col-md-2  col-6">
-                                <div class="card">
-                                    <a href="#">
-                                        <div class="FooterServicesImage ">
-                                           <a href="refund.html">
+                        </div>
+                        <div class="col-md-2  col-6">
+                            <div class="card">
+                                <a href="#">
+                                    <div class="FooterServicesImage ">
+                                        <a href="refund.html">
                                             <div class="FooterServicesImage">
 
                                                 <img src="images/Exchange.png" class="card-img-top" alt="...">
                                             </div>
-                                        </div>
-                                        <div class="card-body">
-                                            <h6 class="card-title">الإستبدال والإسترجاع</h6>
-                                        </div>
-                                    </a>
-                                    </a>
-                                </div>
+                                    </div>
+                                    <div class="card-body">
+                                        <h6 class="card-title">الإستبدال والإسترجاع</h6>
+                                    </div>
+                                </a>
+                                </a>
                             </div>
-                            <div class="col-md-2  col-6">
-                                <div class="card">
-                                    <a href="#">
-                                        <div class="FooterServicesImage">
-                                            <img src="images/email.png" class="card-img-top" alt="...">
-                                        </div>
-                                        <div class="card-body">
-                                            <h6 class="card-title">البريد الألكتروني</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-3 d-md-none d-block"></div>
-                            <div class="col-md-2  col-6">
-                                <div class="card">
-                                    <a href="#">
-                                        <div class="FooterServicesImage">
-                                            <img src="images/phone.png" class="card-img-top" alt="...">
-                                        </div>
-                                        <div class="card-body">
-                                            <h6 class="card-title">الإتصال </h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-3  d-md-none d-block"></div>
-
-                            <div class="col-md-1  d-md-block d-none"></div>
-
                         </div>
+                        <div class="col-md-2  col-6">
+                            <div class="card">
+                                <a href="#">
+                                    <div class="FooterServicesImage">
+                                        <img src="images/email.png" class="card-img-top" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <h6 class="card-title">البريد الألكتروني</h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-3 d-md-none d-block"></div>
+                        <div class="col-md-2  col-6">
+                            <div class="card">
+                                <a href="#">
+                                    <div class="FooterServicesImage">
+                                        <img src="images/phone.png" class="card-img-top" alt="...">
+                                    </div>
+                                    <div class="card-body">
+                                        <h6 class="card-title">الإتصال </h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-3  d-md-none d-block"></div>
+
+                        <div class="col-md-1  d-md-block d-none"></div>
 
                     </div>
+
                 </div>
             </div>
         </div>
-        <div class="SocialMediaIcons py-5 mt-5">
-            <div class="container">
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-brands fa-twitter"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    </li>
-                </ul>
-                <br>
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link " href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-brands fa-youtube"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-brands fa-snapchat"></i></a>
-                    </li>
-
-                </ul>
-
-            </div>
+    </div>
+    <div class="SocialMediaIcons py-5 mt-5 position-relative">
+        <div class="blueLine text-center">
+            <h3 class="mb-0">تابعونا </h3>
         </div>
-        <div class="copyRight">
-            كل الحقوق محفوظة
+        <div class="container pt-4">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+            </ul>
             <br>
-            متجر ياقوت
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link " href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-brands fa-snapchat"></i></a>
+                </li>
+
+            </ul>
+
         </div>
-    </footer>
-    <!--ENd FOoter-->
+    </div>
+    <div class="copyRight">
+        كل الحقوق محفوظة
+        <br>
+        متجر ياقوت
+    </div>
+</footer>
+<!--ENd FOoter-->
 </body>
 
 <script src="assets/js/jquery-3.6.1.min.js"></script>
